# Project_Solaris

./: CMakeLists.txt  MakeFile  README.md  main.c
assets/: planets.csv
include/: camera.h  scene.h  ui.h
src/: camera.c  scene.c  ui.c
